# WinPFPOffset

./: .gitignore  CGALPolygon.h  CMakeLists.txt  CMakePresets.json  CoverageField.h  cdt.h  dp.h  flag_parser.h  geometric_data.h  global_face.h  grid.h  main.cpp  merge_initial.h  obj_input.h  osqp.h  readme.md  remeshing.cpp  single_coverage_ray_detect.h  sort_by_polar_order.h  unique_hash.h  vcpkg.json
.github/workflows/: build-and-release.yml
vcglib/vcg/complex/algorithms/: isotropic_remeshing.h
